<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.Calculator503020Fragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/incomeInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_monthly_income"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputIncome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculated"
        app:layout_constraintTop_toBottomOf="@id/incomeInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/light_purple"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/infoMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/recommended_amounts_for_managing_your_budget"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/btnCalculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="1dp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardResults"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        android:layout_margin="12dp"
        app:layout_constraintTop_toBottomOf="@id/infoMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingVertical="8dp">

                <TextView
                    android:id="@+id/labelNeeds"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nevoi"
                    android:textSize="16sp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/resultNeeds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0_ron"
                    android:textSize="16sp"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingVertical="8dp">

                <TextView
                    android:id="@+id/labelWants"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/wishes"
                    android:textSize="16sp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/resultWants"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0_ron"
                    android:textSize="16sp"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingVertical="8dp">

                <TextView
                    android:id="@+id/labelSavings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/savings"
                    android:textSize="16sp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/resultSavings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0_ron"
                    android:textSize="16sp"
                    android:textColor="@android:color/black" />
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/layoutCheckBoxes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/cardResults"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center">

        <CheckBox
            android:id="@+id/checkboxCurrentMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/evolution_current_month" />
    </LinearLayout>


    <ImageView
        android:id="@+id/graphCalculator"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        android:scaleType="fitCenter"
        android:contentDescription="@string/grafic_buget"
        app:layout_constraintTop_toBottomOf="@id/layoutCheckBoxes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>